# news-topic-classification

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml
.dvc/: config
configs/: infer.yaml  train.yaml
configs/data/: ag_news.yaml
configs/logging/: mlflow.yaml
configs/model/: baseline.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
data/: ag_news.dvc
src/news_topic_classifier/: commands.py  infer.py
src/news_topic_classifier/data/: datamodule.py  download.py
src/news_topic_classifier/models/: baseline.py  lightning_module.py
src/news_topic_classifier/utils/: git.py  seed.py
