[project]
name = "news-topic-classification"
version = "0.1.0"
description = "AG News topic classification with PyTorch Lightning, Hydra, DVC, MLflow"
authors = [
    {name = "Семён Черемисин",email = "svcheremisin@edu.hse.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "pytorch-lightning (>=2.6.0,<3.0.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "news_topic_classifier", from = "src" }]


[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "ruff (>=0.14.9,<0.15.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
