[project]
name = "news-topic-classification"
version = "0.1.0"
description = "AG News topic classification with PyTorch Lightning, Hydra, DVC, MLflow"
authors = [
    {name = "Семён Черемисин",email = "svcheremisin@edu.hse.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch (>=2.3.0,<2.4.0)",
    "pytorch-lightning (>=2.3.3,<2.4.0)",
    "torchmetrics (>=1.4.0,<1.5.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "datasets (>=2.21.0,<3.0.0)",
    "mlflow (>=2.16.0,<3.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "dvc (>=3.53.0,<4.0.0)",
    "numpy (<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "news_topic_classifier", from = "src" }]


[dependency-groups]
dev = [
    "pre-commit (>=3.8.0,<4.0.0)",
    "ruff (>=0.6.8,<0.7.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
